--- a/package.json
+++ b/package.json
@@ -58,18 +58,28 @@
     "watch": "tsc -watch -p ./",
     "pretest": "npm run compile && npm run lint",
     "lint": "eslint src --ext ts",
-    "test": "node ./out/test/runTest.js"
+    "test": "node ./out/test/runTest.js",
+    "test:unit": "npm run compile && mocha --require ts-node/register 'src/test/suite/**/*.test.ts'",
+    "test:coverage": "nyc npm run test:unit",
+    "clean": "rm -rf out *.vsix"
   },
   "devDependencies": {
     "@types/vscode": "^1.74.0",
     "@types/node": "18.x",
+    "@types/mocha": "^10.0.1",
+    "@types/glob": "^8.1.0",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
+    "@vscode/test-electron": "^2.3.0",
     "eslint": "^8.28.0",
+    "glob": "^8.1.0",
+    "mocha": "^10.2.0",
     "typescript": "^4.9.3",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.0",
-    "ts-loader": "^9.4.1"
+    "ts-loader": "^9.4.1",
+    "ts-node": "^10.9.1",
+    "nyc": "^15.1.0"
   },
   "dependencies": {
     "simple-git": "^3.19.0",
