--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,8 +31,6 @@
     "dist",
     "**/*.d.ts",
     "node_modules",
-    ".vscode-test",
-    "**/*.optimized.ts",
-    "**/extension.industry-best-practices.ts"
+    ".vscode-test"
   ]
 }
