--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "truthmeter-ai",
   "displayName": "TruthMeter AI - Coding Assistant Metrics",
   "description": "Measure ACTUAL AI coding assistant ROI (Copilot, Cascade, Cursor, Cody, etc.) with research-backed metrics",
-  "version": "1.0.17",
+  "version": "1.0.18",
   "publisher": "JeffreyJose",
   "author": {
     "name": "Jeffrey Jose"
@@ -110,6 +110,7 @@
     "clean": "rm -rf out *.vsix",
     "package": "vsce package",
     "publish": "vsce publish",
+    "publish:ovsx": "./scripts/publish-ovsx.sh",
     "analyze": "webpack --mode production --profile --json > stats.json && webpack-bundle-analyzer stats.json",
     "prepare": "husky"
   },
