--- a/package.json
+++ b/package.json
@@ -2,17 +2,14 @@
   "name": "truthmeter-ai",
   "displayName": "TruthMeter AI - Coding Assistant Metrics",
   "description": "Measure ACTUAL AI coding assistant ROI (Copilot, Cascade, Cursor, Cody, etc.) with research-backed metrics",
-  "version": "1.0.19",
+  "version": "1.0.20",
   "publisher": "JeffreyJose",
   "author": {
     "name": "Jeffrey Jose"
   },
   "license": "AGPL-3.0",
   "icon": "icon.png",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/jeffreyjose07/truthmeterai"
-  },
+  "repository": "jeffreyjose07/truthmeterai",
   "homepage": "https://github.com/jeffreyjose07/truthmeterai#readme",
   "bugs": {
     "url": "https://github.com/jeffreyjose07/truthmeterai/issues"
